--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "name": "Alexander B\u00f6hn"
     },
     "bugs": {
-        "url": "https://github.com/fish2000/duckpunch/issues"
+        "url": "https://github.com/fish2000/duckpunch.js/issues"
     },
     "contributors": [
         {
@@ -20,7 +20,7 @@
     "engines": {
         "node": ">= 0.8.0"
     },
-    "homepage": "https://github.com/fish2000/duckpunch",
+    "homepage": "https://github.com/fish2000/duckpunch.js",
     "keywords": [
         "duckpunch",
         "prototype",
@@ -35,5 +35,5 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "version": "0.1.0"
+    "version": "0.1.1"
 }
